logs/Slang/generic/class/class_test_12.sv.log
name: class_test_12
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_12.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_12.sv:7:1: error: language feature not yet supported
class Foo #(int N=1, int P=2) extends Bar #(x,y,z);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
